--- a/gs/callapp-1.1.34.plist
+++ b/gs/callapp-1.1.34.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://yinqf.gitee.io/wohutong/gs/callapp-1.1.34.ipa</string>
+					<string>https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/gs/callapp-1.1.34.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
