--- a/jx/callapp-1.1.29.plist
+++ b/jx/callapp-1.1.29.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://yinqf.gitee.io/wohutong/jx/callapp-1.1.29.ipa</string>
+					<string>https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/jx/callapp-1.1.29.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
