--- a/tj2/callapp-1.1.30.plist
+++ b/tj2/callapp-1.1.30.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://yinqf.gitee.io/wohutong/tj2/callapp-1.1.30.ipa</string>
+					<string>https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/tj2/callapp-1.1.30.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
