--- a/xj/callapp-1.2.0.plist
+++ b/xj/callapp-1.2.0.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://yinqf.gitee.io/wohutong/xj/callapp-1.2.0.ipa</string>
+					<string>https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/xj/callapp-1.2.0.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
