--- a/ys/callapp-1.1.23.plist
+++ b/ys/callapp-1.1.23.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://yinqf.gitee.io/wohutong/ys/callapp-1.1.23.ipa</string>
+					<string>https://hollycas.oss-cn-beijing.aliyuncs.com/app_package/ys/callapp-1.1.23.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
